--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://w-gx.github.io" class="blog-button" target="_blank">博客</a>
+                                        <a href="https://w-gx.github.io" class="blog-button" target="_self">博客</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://wgx-dh.github.io" class="blog-button" target="_blank">导航</a>
+                                        <a href="https://wgx-dh.github.io" class="blog-button" target="_self">导航</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -78,13 +78,13 @@
                             <nav class="cover-navigation navigation--social">
                                 <ul class="navigation">
                                     <li class="navigation__item">
-                                        <a href="https://github.com/w-gx/" title="github" target="_blank">
+                                        <a href="https://github.com/w-gx/" title="github" target="_self">
                                             <i class='social iconfont icon-github'></i>
                                             <span class="label">Github</span>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="http://wgx.vercel.app" title="blog mirror" target="_blank">
+                                        <a href="http://wgx.vercel.app" title="blog mirror" target="_self">
                                             <i class='social iconfont icon-cnblogs'></i>
                                             <span class="label">博客镜像</span>
                                         </a>
@@ -113,7 +113,7 @@
                 <a href="https://bird.ioliu.cn/" target="_blank"> JsonBird </a> And 
                 <a href="https://hitokoto.cn/" target="_blank"> Hitokoto </a>
                 Modify by
-                <a href="https://w-gx.github.io/" target="_blank"> WGX </a>
+                <a href="https://w-gx.github.io/" target="_self"> WGX </a>
             </p>
         </div>
     </header>
